# pysynthea

./: .gitignore  README.md  pyproject.toml
src/pysynthea/: build.py  concept_set.py  consts.py  utils.py  utils_concept_set.py
src/pysynthea/cohorts/: censoring_events.py  cohort_entry_event.py  cohort_exit_event.py  criteria.py  entry_event_type.py  fathers_criteria.py  group_criteria.py  inclusion_criteria.py  subgroup_criteria.py
src/pysynthea/cohorts/criteria/: criteria.py  fathers_criteria.py  group_criteria.py  inclusion_criteria.py  subgroup_criteria.py
src/pysynthea/cohorts/entry/: cohort_entry_event.py  entry_criteria.py  entry_event_type.py
src/pysynthea/cohorts/exit/: censoring_events.py  cohort_exit_event.py  event_persistence.py
src/pysynthea/concept_set/: concept_class.py  utils_concept_set.py
src/pysynthea/concept_set/concept_sets_fail/: concept_set.py  concept_set_manager.py  utils_concept_set.py
src/pysynthea/plot/: comorbilidades.py  conditions.csv  plot.py
src/pysynthea/setup/: setup.py  utils_setup.py
tests/: test.py  test2.py  test3.py
tests/test_build/: test.py  test2.py
tests/test_cohort/: test_criteria.py  test_entry_event.py  test_exit_event.py
tests/test_concept_set/: test3.py  test_class.py
tests/test_setup/: test.py  test2.py
