[project]
name = "pysynthea"
version = "0.2.0"
description = "Example OMOP database (Synthea)"
authors = [
    {name = "Javier Sánchez Mayoral", email = "javisanmayoral@gmail.com"},
    {name = "Cristina Ruiz-Poveda Dominguez", email = "cruizpovedadominguez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.1",
    "duckdb-engine>=0.17.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]
